--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.5",
