--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.12",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/lab": "^5.0.0-alpha.171",
     "@mui/material": "^5.16.0",
@@ -25,7 +26,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-toastify": "^10.0.5",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
